--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "body-parser": "^1.16.0",
     "compression": "^1.6.2",
+    "cors": "^2.8.1",
     "express": "^4.14.1",
     "yargs": "^6.6.0"
   },
