--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "compression": "^1.6.2",
     "cors": "^2.8.1",
     "express": "^4.14.1",
-    "yargs": "^6.6.0"
+    "yargs": "^17.2.0"
   },
   "devDependencies": {
+    "@tsconfig/node12": "^1.0.9",
     "@types/express": "^4.0.35",
     "@types/node": "^7.0.4",
+    "@types/yargs": "^17.0.3",
     "tslint": "^5.14.0",
-    "typescript": "^2.1.5"
+    "typescript": "^4.4.3"
   }
 }
