--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,7 @@
 {
+	"extends": "@tsconfig/node12/tsconfig.json",
 	"compilerOptions": {
-		"target": "ES6",
-		"module": "commonjs",
-		"sourceMap": true,
-		"outDir": "lib",
-		"types": [ "node" ],
-		"strictNullChecks": true
+		"outDir": "lib"
 	},
 	"include": [
 		"src/**/*"
