--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,8 @@
 {
 	"extends": "@tsconfig/node12/tsconfig.json",
 	"compilerOptions": {
-		"outDir": "lib"
+		"outDir": "lib",
+		"newLine": "lf"
 	},
 	"include": [
 		"src/**/*"
